<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.75"
        android:scaleType="matrix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/a" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="25"
        android:hint="@string/username_place_holder"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="25"
        android:hint="@string/password_place_holder"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="196dp"
        android:layout_height="55dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/orange_shape_button"
        android:text="@string/sign_in"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.253" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="116dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/goToForgetPasswordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintVertical_bias="0.123" />

</androidx.constraintlayout.widget.ConstraintLayout>