<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/splash_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignupActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.75"
            android:scaleType="matrix"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/a" />

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_edit_text"
            android:entries="@array/gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="25"
            android:hint="@string/fullname_place_holder"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountTypespinner" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="25"
            android:hint="@string/username_place_holder"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="25"
            android:hint="@string/password_place_holder"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <EditText
            android:id="@+id/birthdayEditText"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edit_text"
            android:clickable="true"
            android:ems="25"
            android:focusable="false"
            android:hint="@string/birthday_place_holder"
            android:inputType="date"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderSpinner" />

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="196dp"
            android:layout_height="55dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/orange_shape_button"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthdayEditText" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="238dp"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:text="@string/signup_title"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Spinner
            android:id="@+id/accountTypespinner"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="52dp"
            android:background="@drawable/rounded_edit_text"
            android:entries="@array/userTypes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>